Bug/Bem error-visible

--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -125,7 +125,7 @@
   margin-bottom: 5px;
 }
 
-.popup__error_visible {
+.popup__error-visible {
   font-family: Inter;
   font-size: 12px;
   font-weight: 400;
